<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LincXmap</string>
    <string name="default_cols">2</string>
    <string name="default_rows">2</string>
    <string name="default_sample_selector_gap">20</string>
    <string name="default_sample_selector_size">80</string>
    <string name="default_sample_selector_type">0</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="detection_policy_auto">0</string>
    <string name="detection_policy_manual">1</string>
    <string name="sample_identifier_index">0</string>
    <string name="sample_identifier_name">1</string>
    <string name="colon">:</string>
    <string name="normal">~</string>
    <string name="negative">-</string>
    <string name="positive">+</string>
    
    <string name="fmt_result_title">%1$s %2$9s %3$19s %4$s</string>
    <string name="fmt_result_entry">%1$s %2$6.2f %3$.2f-%4$.2f %5$s</string>
    
    <string name="button_prev">Previous</string>
    <string name="button_next">Next</string>
    <string name="button_ok">OK</string>
    <string name="button_finish">Finish</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_detect">Detect</string>
    
    <string name="menu_add">Add</string>
    <string name="menu_about">About</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_new_template">New template</string>
    <string name="menu_mod_template">Edit template</string>
    <string name="menu_del_template">Delete template</string>
    <string name="menu_send_result">Send Result</string>
    <string name="menu_del_history">Delete History</string>
    <string name="menu_del_profile">Delete Profile</string>
    <string name="menu_add_product">Add Product</string>
    <string name="menu_del_catalog">Delete Catalog</string>
    <string name="menu_mod_product">Modify Product</string>
    <string name="menu_del_product">Delete Product</string>
    
    <string name="label_loading">Loading…</string>
    <string name="label_new">New</string>
    <string name="label_new_template">New template</string>
    <string name="label_new_template_detail">Create new template</string>
    <string name="label_template_name">Name:</string>
    <string name="label_template_rows">Rows:</string>
    <string name="label_template_cols">Columns:</string>
    <string name="label_template_spec">Template spcification</string>
    <string name="label_sample_name">Name</string>
    <string name="label_sample_sum">Sum</string>
    <string name="label_sample_bv">Brightness</string>
    <string name="label_sample_cv">Concentration</string>
    <string name="label_sample_ref">Reference</string>
    <string name="label_sample_remark">Remark</string>
    <string name="label_profile_name">Name:</string>
    <string name="label_profile_sn">SN:</string>
    <string name="label_product_catalog">Catalog:</string>
    <string name="label_product_name">Name:</string>
    <string name="label_product_model">Model:</string>
    <string name="label_product_args">Arguments:</string>
    
    <string name="title_about">About</string>
    <string name="title_product">Product</string>
    <string name="title_add_profile">Add profile</string>
    <string name="title_choose_image">Choose image source</string>
    <string name="title_choose_product">Choose a product</string>
    <string name="title_choose_profile">Choose a profile</string>
    <string name="title_detection">Detection</string>
    <string name="title_detection_policy">Detection policy</string>
    <string name="title_detection_result">Detection result</string>
    <string name="title_detection_settings">Detection settings</string>
    <string name="title_history_list">History list</string>
    <string name="title_launcher">Lincxmap</string>
    <string name="title_product_list">Product list</string>
    <string name="title_profile_list">Profile list</string>
    <string name="title_result_detail">Detection result details</string>
    <string name="title_sample_layout">Sample layout</string>
    <string name="title_sample_identifier">Sample identifier</string>
    <string name="title_sample_settings">Sample settings</string>
    <string name="title_sample_selector_gap">Sample selector gap</string>
    <string name="title_sample_selector_settings">Sample selector settings</string>
    <string name="title_sample_selector_size">Sample selector size</string>
    <string name="title_sample_selector_type">Sample selector size</string>
    <string name="title_send_result">Send result</string>
    <string name="title_settings">Settings</string>
    <string name="title_template_list">Template list</string>
    <string name="title_template_new">New template</string>
    
    <string name="summary_detection_policy">Choose a detection policy</string>
    <string name="summary_sample_identifier">Choose a sample identifier</string>
    <string name="summary_sample_selector_size">Set sample selector size</string>
    <string name="summary_sample_selector_gap">Set sample selector gap</string>
    <string name="summary_sample_selector_type">Set sample selector type</string>
    
    <string name="hint_template_name">Template Name</string>
    <string name="hint_template_rows">Template Rows</string>
    <string name="hint_template_cols">Template Columns</string>
    <string name="hint_product_name">Please input product name</string>
    <string name="hint_profile_name_or_sn">Please input profile name or serial number</string>
    
    <string name="image_source_capture">Capture</string>
    <string name="image_source_gallery">Gallery</string>
    
    <string name="msg_add_product_succeed">Add product succeed</string>
    <string name="msg_add_profile_succeed">Add profile succeed</string>
    <string name="msg_update_product_succeed">Update product succeed</string>
    <string name="msg_update_profile_succeed">Update profile succeed</string>
    <string name="msg_template_name_required">Template name is required</string>
    <string name="msg_detecting">Detecting&#8230;</string>
    <string name="msg_confirm_delete">Are you sure to delete it?</string>
    <string name="msg_confirm_delete_all">Are you sure to delete all?</string>
    <string name="msg_out_of_memory">Out of memory</string>
    <string name="msg_profile_name_required">Profile name is required</string>
    <string name="msg_profile_sn_required">Serial number is required</string>
    <string name="msg_product_catalog_required">Catalog is required</string>
    <string name="msg_product_name_required">Product name is required</string>
    <string name="msg_product_arg_value_required">Product arg value is required</string>
    <string name="msg_invalid_image">Invalid image</string>
    <string name="msg_unsupported_value">Unsuppored value</string>
    
    <string name="about_version">LincXmap (Android) 1.0beta</string>
    <string name="about_copyright">Copyright &#169; 2009&#8211;2012 Shanghai Lincbio Co,Ltd. All rights Reserved.</string>

</resources>