<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/title_settings" >

    <PreferenceCategory android:title="@string/title_sample_settings" >
        <ListPreference
            android:defaultValue="@string/sample_identifier_name"
            android:dialogIcon="@android:drawable/ic_dialog_info"
            android:dialogTitle="@string/title_sample_identifier"
            android:entries="@array/array_sample_identifier_names"
            android:entryValues="@array/array_sample_identifier_values"
            android:key="key_sample_identifier"
            android:summary="@string/summary_sample_identifier"
            android:title="@string/title_sample_identifier" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_sample_selector_settings" >
        <ListPreference
            android:defaultValue="@string/default_sample_selector_type"
            android:dialogIcon="@android:drawable/ic_dialog_info"
            android:dialogTitle="@string/title_sample_selector_type"
            android:entries="@array/array_sample_selector_type_names"
            android:entryValues="@array/array_sample_selector_type_values"
            android:key="key_sample_selector_type"
            android:summary="@string/summary_sample_selector_type"
            android:title="@string/title_sample_selector_type" />

        <EditTextPreference
            android:defaultValue="@string/default_sample_selector_size"
            android:key="key_sample_selector_size"
            android:summary="@string/summary_sample_selector_size"
            android:title="@string/title_sample_selector_size" />
        <EditTextPreference
            android:defaultValue="@string/default_sample_selector_gap"
            android:key="key_sample_selector_gap"
            android:summary="@string/summary_sample_selector_gap"
            android:title="@string/title_sample_selector_gap" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_detection_settings" >
        <ListPreference
            android:defaultValue="@string/detection_policy_manual"
            android:dialogIcon="@android:drawable/ic_dialog_info"
            android:dialogTitle="@string/title_detection_policy"
            android:entries="@array/array_detection_policy_names"
            android:entryValues="@array/array_detection_policy_values"
            android:key="key_detection_policy"
            android:summary="@string/summary_detection_policy"
            android:title="@string/title_detection_policy" />
    </PreferenceCategory>

</PreferenceScreen>